# e-redes-smart-metering-plus-hass

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  config_flow_backup.py  config_flow_minimal.py  debug.sh  debug_options_flow.py  docker-compose.override.yml  docker-compose.yml  hacs.json  pyproject.toml  pytest.ini  requirements_dev.txt  strings_test.json  test_config_flow.py  test_options_flow.py  validate.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/workflows/: lint.yml  tests.yml
.hacs/: config.json
.reports/: pytest-junit.xml
.translations/: en.json  pt.json
custom_components/e_redes_smart_metering_plus/: __init__.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  logger_example.py  manifest.json  number.py  quality_scale.yaml  sensor.py  services.yaml  strings.json  text.py  webhook.py
custom_components/e_redes_smart_metering_plus/.translations/: en.json
custom_components/e_redes_smart_metering_plus/translations/: en.json  es.json  pt.json
docs/: PRE_COMMIT_HOOK.md  setup.md
scripts/: install-hooks.sh  pre-commit
tests/: README.md  __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_diagnostic_sensors.py  test_integration.py  test_number.py  test_sensor.py  test_webhook.py  test_webhook_data.py
